git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@121 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -414,6 +414,12 @@
     <Compile Include="Form\SousEpisode\FrmSousEpisode.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\Traitement\RadFAllergieEtCISuppressionDetail.Designer.vb">
+      <DependentUpon>RadFAllergieEtCISuppressionDetail.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Traitement\RadFAllergieEtCISuppressionDetail.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\Traitement\RadFDeclarationAllergieEtCIDetail.Designer.vb">
       <DependentUpon>RadFDeclarationAllergieEtCIDetail.vb</DependentUpon>
     </Compile>
@@ -924,6 +930,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\SousEpisode\FrmSousEpisode.resx">
       <DependentUpon>FrmSousEpisode.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Traitement\RadFAllergieEtCISuppressionDetail.resx">
+      <DependentUpon>RadFAllergieEtCISuppressionDetail.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Traitement\RadFDeclarationAllergieEtCIDetail.resx">
       <DependentUpon>RadFDeclarationAllergieEtCIDetail.vb</DependentUpon>
