git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@123 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -222,6 +222,7 @@
     <Compile Include="Bean\Ordonnance\OrdonnanceDetailGrid.vb" />
     <Compile Include="Bean\Medicament\Medicament.vb" />
     <Compile Include="Bean\SousEpisode\SousEpisodeSousType.vb" />
+    <Compile Include="Bean\SousEpisode\SousEpisode.vb" />
     <Compile Include="Bean\SousEpisode\SousEpisodeType.vb" />
     <Compile Include="Dao\Antecedent\AntecedentAffectationDao.vb" />
     <Compile Include="Bean\LigneDeVie\LigneDeVie.vb" />
