git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@125 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -231,6 +231,7 @@
     <Compile Include="Dao\Episode\EpisodeContexteDao.vb" />
     <Compile Include="Dao\LigneDeVie\PatientParametreLdvDao.vb" />
     <Compile Include="Dao\Medicament\MedicamentDao.vb" />
+    <Compile Include="Dao\SousEpisode\SousEpisodeDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeSousTypeDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeTypeDao.vb" />
     <Compile Include="Form\DRC\RadFActeParamedicalTest.Designer.vb">
