git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@133 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/App.config
+++ b/oasis/App.config
@@ -34,6 +34,11 @@
     <add key="AgeMinPreventionFemme" value="12" />
     <add key="DrcIdGrossesse" value="833" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="ParametreIdTaille" value="2" />
+    <add key="ParametreIdIMC" value="3" />
+    <add key="ParametreIdPAM" value="8" />
+    <add key="AgeAdulteHomme" value="20" />
+    <add key="AgeAdulteFemme" value="15" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
