git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@144 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/App.config
+++ b/oasis/App.config
@@ -39,6 +39,7 @@
     <add key="ParametreIdPAM" value="8" />
     <add key="AgeAdulteHomme" value="20" />
     <add key="AgeAdulteFemme" value="15" />
+    <add key="DelaiDefautReponseSousEpisode" value ="15"/>
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
