git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@171 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -864,6 +864,8 @@
     <Compile Include="Form\General\FmUniteSanitaire.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="UtilsUI\Notification.vb" />
+    <Compile Include="UtilsUI\RadInputBox.vb" />
     <Compile Include="Version old\SChkContexteValide.Designer.vb">
       <DependentUpon>SChkContexteValide.vb</DependentUpon>
     </Compile>
