--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -236,6 +236,8 @@
     <Compile Include="Dao\Medicament\MedicamentDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeReponseDao.vb" />
+    <Compile Include="Dao\SousEpisode\SousEpisodeSousSousType.vb" />
+    <Compile Include="Dao\SousEpisode\SousEpisodeSousSousTypeDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeSousTypeDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeTypeDao.vb" />
     <Compile Include="Form\DRC\RadFActeParamedicalTest.Designer.vb">
