git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@185 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -222,6 +222,7 @@
     <Compile Include="Bean\Ordonnance\Ordonnance.vb" />
     <Compile Include="Bean\Ordonnance\OrdonnanceDetailGrid.vb" />
     <Compile Include="Bean\Medicament\Medicament.vb" />
+    <Compile Include="Bean\SousEpisode\SousEpisodeDetailSousType.vb" />
     <Compile Include="Bean\SousEpisode\SousEpisodeReponse.vb" />
     <Compile Include="Bean\SousEpisode\SousEpisodeSousType.vb" />
     <Compile Include="Bean\SousEpisode\SousEpisode.vb" />
@@ -235,6 +236,7 @@
     <Compile Include="Dao\LigneDeVie\PatientParametreLdvDao.vb" />
     <Compile Include="Dao\Medicament\MedicamentDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeDao.vb" />
+    <Compile Include="Dao\SousEpisode\SousEpisodeDetailSousTypeDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeReponseDao.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeSousSousType.vb" />
     <Compile Include="Dao\SousEpisode\SousEpisodeSousSousTypeDao.vb" />
