git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@194 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -433,10 +433,10 @@
     <Compile Include="Form\LigneDeVie\RadFLigneDeVieGraphe.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\Medicament\RadFATCListe.Designer.vb">
+    <Compile Include="Form\Theriaque\RadFATCListe.Designer.vb">
       <DependentUpon>RadFATCListe.vb</DependentUpon>
     </Compile>
-    <Compile Include="Form\Medicament\RadFATCListe.vb">
+    <Compile Include="Form\Theriaque\RadFATCListe.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form\Patient\RadFPatientRendez-vousListe.Designer.vb">
@@ -970,7 +970,7 @@
     <EmbeddedResource Include="Form\LigneDeVie\RadFLigneDeVieGraphe.resx">
       <DependentUpon>RadFLigneDeVieGraphe.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\Medicament\RadFATCListe.resx">
+    <EmbeddedResource Include="Form\Theriaque\RadFATCListe.resx">
       <DependentUpon>RadFATCListe.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Patient\RadFPatientRendez-vousListe.resx">
