--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -575,10 +575,10 @@
     <Compile Include="Menu\FrmMain.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form\SousEpisode\FrmTestRichText.Designer.vb">
-      <DependentUpon>FrmTestRichText.vb</DependentUpon>
+    <Compile Include="Form\SousEpisode\FrmEditDocxSousEpisode.Designer.vb">
+      <DependentUpon>FrmEditDocxSousEpisode.vb</DependentUpon>
     </Compile>
-    <Compile Include="Form\SousEpisode\FrmTestRichText.vb">
+    <Compile Include="Form\SousEpisode\FrmEditDocxSousEpisode.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Module\CacheGlobal.vb" />
@@ -1126,8 +1126,8 @@
     <EmbeddedResource Include="Form\Traitement\RadFTraitementObsoletes.resx">
       <DependentUpon>RadFTraitementObsoletes.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form\SousEpisode\FrmTestRichText.resx">
-      <DependentUpon>FrmTestRichText.vb</DependentUpon>
+    <EmbeddedResource Include="Form\SousEpisode\FrmEditDocxSousEpisode.resx">
+      <DependentUpon>FrmEditDocxSousEpisode.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\licenses.licx" />
     <EmbeddedResource Include="Form\ALD\FAldSelecteur.resx">
