--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -434,6 +434,12 @@
     <Compile Include="Form\LigneDeVie\RadFLigneDeVieGraphe.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\SousEpisode\FrmAdminTemplateDocx.Designer.vb">
+      <DependentUpon>FrmAdminTemplateDocx.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\SousEpisode\FrmAdminTemplateDocx.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\Theriaque\RadFATCListe.Designer.vb">
       <DependentUpon>RadFATCListe.vb</DependentUpon>
     </Compile>
@@ -568,6 +574,12 @@
       <DependentUpon>FrmAbout.vb</DependentUpon>
     </Compile>
     <Compile Include="Menu\FrmAbout.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Menu\FrmAdminTemplateSousEpisode.Designer.vb">
+      <DependentUpon>FrmAdminTemplateSousEpisode.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Menu\FrmAdminTemplateSousEpisode.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Menu\FrmMain.Designer.vb">
@@ -971,6 +983,9 @@
     <EmbeddedResource Include="Form\LigneDeVie\RadFLigneDeVieGraphe.resx">
       <DependentUpon>RadFLigneDeVieGraphe.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Form\SousEpisode\FrmAdminTemplateDocx.resx">
+      <DependentUpon>FrmAdminTemplateDocx.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form\Theriaque\RadFATCListe.resx">
       <DependentUpon>RadFATCListe.vb</DependentUpon>
     </EmbeddedResource>
@@ -1036,6 +1051,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Menu\FrmAbout.resx">
       <DependentUpon>FrmAbout.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Menu\FrmAdminTemplateSousEpisode.resx">
+      <DependentUpon>FrmAdminTemplateSousEpisode.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu\FrmMain.resx">
       <DependentUpon>FrmMain.vb</DependentUpon>
