git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@203 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -434,6 +434,12 @@
     <Compile Include="Form\LigneDeVie\RadFLigneDeVieGraphe.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\SousEpisode\FrmAdminTemplate.Designer.vb">
+      <DependentUpon>FrmAdminTemplate.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\SousEpisode\FrmAdminTemplate.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\SousEpisode\FrmAdminTemplateDocx.Designer.vb">
       <DependentUpon>FrmAdminTemplateDocx.vb</DependentUpon>
     </Compile>
@@ -982,6 +988,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\LigneDeVie\RadFLigneDeVieGraphe.resx">
       <DependentUpon>RadFLigneDeVieGraphe.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\SousEpisode\FrmAdminTemplate.resx">
+      <DependentUpon>FrmAdminTemplate.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\SousEpisode\FrmAdminTemplateDocx.resx">
       <DependentUpon>FrmAdminTemplateDocx.vb</DependentUpon>
