git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@212 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -452,6 +452,12 @@
     <Compile Include="Form\SousEpisode\FrmAdminTemplateDocx.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\Theriaque\RadFEffetSecondaire.Designer.vb">
+      <DependentUpon>RadFEffetSecondaire.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\Theriaque\RadFEffetSecondaire.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\Theriaque\RadFMedicamentSelecteur.Designer.vb">
       <DependentUpon>RadFMedicamentSelecteur.vb</DependentUpon>
     </Compile>
@@ -1003,6 +1009,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\SousEpisode\FrmAdminTemplateDocx.resx">
       <DependentUpon>FrmAdminTemplateDocx.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\Theriaque\RadFEffetSecondaire.resx">
+      <DependentUpon>RadFEffetSecondaire.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\Theriaque\RadFMedicamentSelecteur.resx">
       <DependentUpon>RadFMedicamentSelecteur.vb</DependentUpon>
