git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@241 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Oasis_WF.vbproj
+++ b/oasis/Oasis_WF.vbproj
@@ -448,6 +448,12 @@
     <Compile Include="Form\LigneDeVie\RadFLigneDeVieGraphe.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Form\SousEpisode\FrmActionDoc.Designer.vb">
+      <DependentUpon>FrmActionDoc.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Form\SousEpisode\FrmActionDoc.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form\SousEpisode\FrmAdminTemplateDocx.Designer.vb">
       <DependentUpon>FrmAdminTemplateDocx.vb</DependentUpon>
     </Compile>
@@ -1023,6 +1029,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form\LigneDeVie\RadFLigneDeVieGraphe.resx">
       <DependentUpon>RadFLigneDeVieGraphe.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form\SousEpisode\FrmActionDoc.resx">
+      <DependentUpon>FrmActionDoc.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form\SousEpisode\FrmAdminTemplateDocx.resx">
       <DependentUpon>FrmAdminTemplateDocx.vb</DependentUpon>
